--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="LiveReconAI - Your AI-powered finance copilot. Turn raw financial data into clear, actionable insights with consent-based access and natural language Q&A." />
     <title>LiveReconAI - Your Finance Copilot</title>
